# PreferansSolver

./: CMakeLists.txt  CardDefs.h  CardPack.cpp  CardPack.h  Game.cpp  Game.h  GameState.cpp  GameState.h  Main.cpp  Makefile  Makefile.defs  Makefile.sub  Path.cpp  Path.h  Player.cpp  Player.h  Score.cpp  Score.h  Test.cpp  VisitedStateCache.cpp  VisitedStateCache.h
